--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "esprima": "4.0.0",
     "jshint": "2.9.7",
     "lebab": "2.7.7",
+    "mitata": "^1.0.10",
     "postcss": "6.0.21",
     "postcss-nested": "3.0.0",
     "prepack": "0.2.25",
